the environment set, django project created .env.dev file for sensitive data added Dockerfile and docker-compose.yml added

--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+django = "*"
+python-dotenv = "*"
+psycopg = "*"
+postgres = "*"
+psycopg2-binary = "*"
 
 [dev-packages]
 
