--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,19 @@
-version: '2.6.1'
+
 services:
   app:
     build: .
+    ports:
+      - "8000:8000"
     depends_on:
       - db
 
   db:
     image: postgres
     ports:
-    - "5432:5432"
-    env_file: .env.dev
+      - "5432:5432"
+    env_file:
+      - .env.dev
+#    environment:
+#      - POSTGRES_PASSWORD=postgres
+#      - POSTGRES_DB=postgres
+#      - POSTGRES_USER=postgres
