--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ python-dotenv = "*"
 psycopg = "*"
 postgres = "*"
 psycopg2-binary = "*"
+djangorestframework = "*"
+drf-nested-routers = "*"
 
 [dev-packages]
 
