--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,8 @@ postgres = "*"
 psycopg2-binary = "*"
 djangorestframework = "*"
 drf-nested-routers = "*"
+install = "*"
+pyjwt = "*"
 
 [dev-packages]
 
