logic for some routes added (pages, posts) volumes fixed in docker-compose email validation added

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     depends_on:
       - db
     volumes:
-      - my-app:/app
+      - .:/app
 
   db:
     image: postgres
@@ -17,6 +17,6 @@ services:
       - .env.dev
     volumes:
       - postgres_volume:/var/lib/postgresql/data
+
 volumes:
   postgres_volume:
-  my-app:
