some code added to upload file to Localstack

--- a/.env.dev
+++ b/.env.dev
@@ -5,3 +5,8 @@ POSTGRES_PASSWORD=1234
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
 MINUTES_TOKEN_VALID=100
+AWS_ACCESS_KEY_ID=13870
+AWS_SECRET_ACCESS_KEY=13870
+AWS_DEFAULT_REGION=us-east-1
+AWS_STORAGE_BUCKET_NAME='innotterprofilepictures'
+ENDPOINT_URL=https://app.localstack.cloud/resources/s3/innotterprofilepictures
