--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,5 +18,15 @@ services:
     volumes:
       - postgres_volume:/var/lib/postgresql/data
 
+  localstack:
+    image: localstack/localstack:latest
+    ports:
+      - "4566:4566"
+    env_file:
+      - .env.dev
+    volumes:
+      - "${TMPDIR:-/tmp}/localstack:/var/lib/localstack"
+      - /var/run/docker.sock:/var/run/docker.sock
+
 volumes:
   postgres_volume:
