--- a/.env.dev
+++ b/.env.dev
@@ -5,3 +5,4 @@ POSTGRES_PASSWORD=1234
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
 MINUTES_TOKEN_VALID=100
+CELERY_BROKER_URL = 'amqp://guest:guest@rabbitmq:5672//'
