--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       context: .
     command: celery -A innotter worker --loglevel=INFO
     volumes:
-      - ./app:/app
+      - .:/app
     env_file:
       - .env.dev
     depends_on:
