--- a/.env.dev
+++ b/.env.dev
@@ -6,3 +6,5 @@ POSTGRES_HOST=db
 POSTGRES_PORT=5432
 MINUTES_TOKEN_VALID=100
 CELERY_BROKER_URL = 'amqp://guest:guest@rabbitmq:5672//'
+EMAIL_HOST_USER=innotesttestt@gmail.com
+EMAIL_HOST_PASSWORD=velafuepcmbitcsd
