dynamodb used instead of mongo

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,29 +54,6 @@ services:
       - rabbitmq
       - app
 
-#  microservice:
-#    container_name: microservice
-#    build:
-#      context: ./innotter_statictics
-#      dockerfile: Dockerfile
-#    ports:
-#      - "8001:8001"
-#    depends_on:
-#      - db
-#    volumes:
-#      - .:/microservice
-
-  mongo-db:
-    container_name: innotter-mongo
-    image: mongo
-    restart: always
-    env_file:
-      - .env.dev
-    networks:
-      - innotter_network
-    volumes:
-      - mongo_volume:/data/db
-
   fastapi:
     container_name: innotter-fastapi
     restart: always
@@ -94,29 +71,35 @@ services:
       - rabbitmq
       - mongo-db
 
-  dynamodb-local:
-    container_name: statictics-dynamodb-local
+  dynamodb:
+    container_name: statictics-dynamodb
     image: amazon/dynamodb-local
-    ports:
-      - "8001:8001"
-
-  dynamodb-admin:
-    container_name: statictics--dynamodb-admin
-    image: aaronshaf/dynamodb-admin
+    restart: unless-stopped
     ports:
       - "8002:8002"
-    environment:
-      DYNAMO_ENDPOINT: "http://dynamodb-local:8001"
-      AWS_REGION: "us-west-2"
-      AWS_ACCESS_KEY_ID: local
-      AWS_SECRET_ACCESS_KEY: local
+    volumes:
+      - dynamodb_volume:/home/dynamodblocal/data
+    command: "-jar DynamoDBLocal.jar -sharedDb -dbPath /home/dynamodblocal/data/ -port 8002"
+    user: root
+
+  dynamodb-admin:
+    container_name: statictics-dynamodb-admin
+    image: aaronshaf/dynamodb-admin
+    build:
+      context: ./innotter_statictics
+      dockerfile: admin.Dockerfile
+    ports:
+      - "8001:8001"
+    env_file:
+      - .env.dev
     depends_on:
-      - dynamodb-local
+      - dynamodb
 
 volumes:
   postgres_volume:
   mongo_volume:
   fastapi_volume:
+  dynamodb_volume:
 
 networks:
   innotter_network:
